--- a/src/assets/sass/base/_variables.scss
+++ b/src/assets/sass/base/_variables.scss
@@ -2,10 +2,21 @@
 $white: #fefefe;
 $lgrey: #f8f8f8;
 $grey: #eee;
+$dgrey: #777;
 $black: #111111;
 $blue: #6e6eff;
+
+$cred: #DBAFB0;
+$cblue: #8390E4;
+$cgreen: #D4F2D2;
+$cpurple: #B5B0C5;
+$corange: #FFE8BA;
+$cgrey: #D1D0DC;
+$cpeach: #F9C9AF;
 
 // transition
 $cub-1: cubic-bezier(0.65, 0.05, 0.36, 1);
 
 // box-shadow
+$box-shadow-note: 0px 4px 5px -4px rgba($black,0.5);
+// $box_shadow_note-2: 0px 0px 3px 1px rgba($black, .1);
