--- a/src/assets/sass/layout/_allnotes.scss
+++ b/src/assets/sass/layout/_allnotes.scss
@@ -1,8 +1,119 @@
 .all-notes {
 	grid-area: main;
-
-	// background: orangered;
-	// width: 70%;
-	// margin: 0 auto;
-	padding: 0 20rem;
+	padding: 5rem 20rem;
 }
+
+.grid-allnotes {
+	height: auto;
+	// padding: 1rem;
+	-webkit-column-width: 21rem;
+	-webkit-column-gap: 2rem;
+	-moz-column-width: 21rem;
+	-moz-column-gap: 2rem;
+	column-width: 21.5rem;
+	column-gap: 2rem;
+	
+	.note {
+		padding: .8rem 1.8rem;
+		// height: auto;
+		// width: auto;
+		// min-width: 22rem;
+		// display: inline-block; //! BITNOOO, ILI IPAK NE
+		-webkit-column-break-inside: avoid; //! BITNOO
+          page-break-inside: avoid; //! BITNOOO
+               break-inside: avoid; //! BITNOOO
+		font-size: 1.3rem;
+		box-shadow: $box-shadow-note;
+
+		&:hover {
+			.note__pin,
+			.note__options {
+				opacity: 1;
+				visibility: visible;
+
+			}
+		}
+
+		// &__pin {
+		// 	pointer-events: none;
+		// }
+
+		&__pin,
+		&__options  {
+			opacity: 0;
+			visibility: hidden;
+			@extend .transition-2;
+		}
+
+		&__click-open-note {
+			z-index: 2;
+		}
+		&__pin {
+			z-index: 5;
+		}
+
+		&__body {
+			max-height: 30rem;
+			min-height: 4rem;
+			overflow: hidden;
+			box-sizing: inherit;
+			font-size: 1.4rem;
+		}
+
+		&__options {
+			display: flex;
+			// grid-column: 1/-1 !important;
+			justify-content: space-evenly;
+			// pointer-events: none;
+
+			i {
+				font-size: 1.3rem;
+			}
+
+			// button {
+			// 	display: none;
+			// }
+		}
+	}
+}
+
+
+
+.open-note {
+	position: absolute;
+	z-index: 100;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	@extend .transition-2;
+	width: 70rem !important;
+	font-size: 1.5rem;
+}
+
+.open-note-opacity {
+	opacity: 1 !important;
+	visibility: visible !important;
+}
+
+.open-note-background {
+	position: absolute;
+	z-index: 90;
+	// width: 100%;
+	// height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba($grey, .6);
+	backdrop-filter: blur(2px);
+}
+
+
+
+
+
+
+// @media screen and (max-width: 750px) { 
+// 	.grid-allnotes  { column-gap: 0px; }
+// 	.grid-allnotes  .note { width: 100%; }
+// }
